modified:   app.json 	new file:   eas.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/components/Actions/index.js 	modified:   src/components/Movements/index.js 	new file:   src/modal/entradas.js 	new file:   "src/modal/sa\303\255das.js" 	modified:   src/routes/index.js 	modified:   src/screens/Home/index.js

--- a/app.json
+++ b/app.json
@@ -2,6 +2,11 @@
   "expo": {
     "name": "ZagueFinances",
     "slug": "ZagueFinances",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "extra": {
+      "eas": {
+        "projectId": "053a5f0a-a883-4e72-9cdf-3eb6f8f6162f"
+      }
+    }
   }
 }
